# context-mcp-server

./: Cargo.toml  Makefile  NOTICE  README.md  progress.md  spec_refs.md
src/: config.rs  lib.rs  main.rs  schema.rs  server.rs
src/handlers/: health.rs  inspect_cache.rs  list_caches.rs  mod.rs  resolve_context.rs
src/protocol/: mod.rs  request.rs  response.rs
tests/: determinism.rs  golden.rs  handler_tests.rs  mcp_error_schema.rs  schema_harness.rs
tests/golden/: test_golden.rs
tests/golden/expected/: build_manifest.json  error_cache_invalid.json  error_cache_missing.json  error_permission_denied.json  inspect_invalid.json  inspect_valid.json  list_caches.json  mcp_resolve_basic.json  resolve_basic.json  resolve_ordering.json  resolve_zero_budget.json
tests/golden/fixtures/cache_valid/: index.json
tests/golden/fixtures/cache_valid/documents/: 19835fc46fd4.json  c070a5c47a9f.json  e3b0c44298fc.json
tests/golden/fixtures/docs/: deployment.md  security.md
