[package]
name = "mcp-context-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_context_server"
path = "src/lib.rs"

[[bin]]
name = "mcp-context-server"
path = "src/main.rs"

[dependencies]
context-core = { path = "../context-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std", "time"] }
jsonschema = "0.41.0"

[dev-dependencies]
chrono = "0.4"
sha2 = "0.10"
tempfile = "3"
